# regalgo-presidentielle

./: .gitignore
election-presidentielle/: README.md  pyproject.toml
election-presidentielle/src/election_presidentielle/: __init__.py  metadata.json  regles.py
election-presidentielle/tests/: test_regles.py
